@@ -142,6 +142,8 @@ ECL 0.9k:
  - New function EXT:MAKE-PIPE implements the equivalent of POSIX pipe() but
    producing a two-way stream.
 
+ - Support for large files in systems that implement fseeko().
+
 * CLOS:
 
  - When caching generic function calls, ECL now uses a thread-local hash table
